# Instaflask

./: .env.sample  README.md  app.py  models.py  pyproject.toml
templates/: base.html  bottom_nav.html  cards.html  explore.html  flash_messages.html  login.html  profile.html  register.html
