[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instaflask"
version = "0.1.0"
description = "A simple social media timeline web application built with Flask and SQLite"
authors = [
    { name = "Luka", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.3",
    "Flask-SQLAlchemy>=3.1.1",
    "Werkzeug>=3.0.3",
    "python-dotenv>=1.0.1"
]

[tool.hatch.build.targets.wheel]
packages = ["."]